force-app/main/default/objects/RE_Depot_Pricing_Backbone__c/RE_Depot_Pricing_Backbone__c.object-meta.xml
<CustomObject>
    <label>Depot Pricing Backbone</label>
    <nameField>
        <displayFormat>DPB-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Depot Pricing Backbone</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>