force-app/main/default/objects/RE_Depot_Pricing_Backbone__c/fields/HCV_Surcharges_UNIT__c.field-meta.xml
<CustomField>
    <fullName>HCV_Surcharges_UNIT__c</fullName>
    <label>HCV Surcharges UNIT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>THB/LTR</fullName>
            </value>
            <value>
                <fullName>THB/KG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>