force-app/main/default/objects/RE_Depot_Pricing_Backbone__c/fields/Material_Code__c.field-meta.xml
<CustomField>
    <fullName>Material_Code__c</fullName>
    <formula>RE_Product_Name__r.RE_Material__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material Code</label>
    <type>Text</type>
</CustomField>