force-app/main/default/objects/RE_Depot_Pricing_Backbone__c/fields/RE_Backbone_Name__c.field-meta.xml
<CustomField>
    <fullName>RE_Backbone_Name__c</fullName>
    <label>Backbone Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>