force-app/main/default/objects/RE_Depot_Pricing_Backbone__c/fields/RE_CND_CanadianDailyRack7Day_DEX__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_CanadianDailyRack7Day_DEX__c</fullName>
    <formula>&apos;CRACSD &apos;+ TEXT(RE_CND_DEX_loc_code__c) + &apos; &apos; +  TEXT(RE_CND_DEX_product_code__c) + &apos; SPOT P&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CanadianDailyRack7Day DEX</label>
    <type>Text</type>
</CustomField>