force-app/main/default/objects/RE_Depot_Pricing_Backbone__c/fields/RE_CND_DEX_loc_code__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_DEX_loc_code__c</fullName>
    <description>DEX loc code used in Canadiandailyrack and Canadiandailyrack7day output files</description>
    <label>DEX loc code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BELLV</fullName>
            </value>
            <value>
                <fullName>BPOINT</fullName>
            </value>
            <value>
                <fullName>CALGRY</fullName>
            </value>
            <value>
                <fullName>EDMONT</fullName>
            </value>
            <value>
                <fullName>HAMILT</fullName>
            </value>
            <value>
                <fullName>KINGST</fullName>
            </value>
            <value>
                <fullName>KLOOPS</fullName>
            </value>
            <value>
                <fullName>LONDCA</fullName>
            </value>
            <value>
                <fullName>MONTRE</fullName>
            </value>
            <value>
                <fullName>OTTAWA</fullName>
            </value>
            <value>
                <fullName>PGEORG</fullName>
            </value>
            <value>
                <fullName>QUEBEC</fullName>
            </value>
            <value>
                <fullName>REGINA</fullName>
            </value>
            <value>
                <fullName>SARNIA</fullName>
            </value>
            <value>
                <fullName>SASKA</fullName>
            </value>
            <value>
                <fullName>SAULT</fullName>
            </value>
            <value>
                <fullName>THUBAY</fullName>
            </value>
            <value>
                <fullName>TORONT</fullName>
            </value>
            <value>
                <fullName>VANCOU</fullName>
            </value>
            <value>
                <fullName>WINNPG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>