force-app/main/default/objects/RE_Depot_Pricing_Backbone__c/fields/RE_CND_DEX_product_code__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_DEX_product_code__c</fullName>
    <description>DEX product code used in Canadiandailyrack and Canadiandailyrack7day output files</description>
    <label>DEX product code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>DAB3</fullName>
            </value>
            <value>
                <fullName>DAB4</fullName>
            </value>
            <value>
                <fullName>DBC2</fullName>
            </value>
            <value>
                <fullName>DBC4</fullName>
            </value>
            <value>
                <fullName>DBC5</fullName>
            </value>
            <value>
                <fullName>DFQC2</fullName>
            </value>
            <value>
                <fullName>DFQC5</fullName>
            </value>
            <value>
                <fullName>DFQC6</fullName>
            </value>
            <value>
                <fullName>DFQC7</fullName>
            </value>
            <value>
                <fullName>DFQC9</fullName>
            </value>
            <value>
                <fullName>DON3</fullName>
            </value>
            <value>
                <fullName>DON4</fullName>
            </value>
            <value>
                <fullName>DON5</fullName>
            </value>
            <value>
                <fullName>DON6</fullName>
            </value>
            <value>
                <fullName>DQC2</fullName>
            </value>
            <value>
                <fullName>DQC5</fullName>
            </value>
            <value>
                <fullName>DQC6</fullName>
            </value>
            <value>
                <fullName>DQC7</fullName>
            </value>
            <value>
                <fullName>DQC9</fullName>
            </value>
            <value>
                <fullName>ETH1P</fullName>
            </value>
            <value>
                <fullName>FON3</fullName>
            </value>
            <value>
                <fullName>FON4</fullName>
            </value>
            <value>
                <fullName>FON5</fullName>
            </value>
            <value>
                <fullName>FON6</fullName>
            </value>
            <value>
                <fullName>GDFN</fullName>
            </value>
            <value>
                <fullName>GDSTV</fullName>
            </value>
            <value>
                <fullName>M89UN</fullName>
            </value>
            <value>
                <fullName>MPUN</fullName>
            </value>
            <value>
                <fullName>MUN</fullName>
            </value>
            <value>
                <fullName>ULSD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>