force-app/main/default/objects/RE_Depot_Pricing_Backbone__c/fields/RE_CND_DEX_Products__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_DEX_Products__c</fullName>
    <description>DEX Products used in Canadiandailyrack and Canadiandailyrack7day output files</description>
    <label>DEX Products</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E10</fullName>
            </value>
            <value>
                <fullName>Furnace</fullName>
            </value>
            <value>
                <fullName>Mid</fullName>
            </value>
            <value>
                <fullName>Pre</fullName>
            </value>
            <value>
                <fullName>ULS1</fullName>
            </value>
            <value>
                <fullName>ULSD</fullName>
            </value>
            <value>
                <fullName>ULSD AB03</fullName>
            </value>
            <value>
                <fullName>ULSD AB04</fullName>
            </value>
            <value>
                <fullName>ULSD BC02</fullName>
            </value>
            <value>
                <fullName>ULSD BC04</fullName>
            </value>
            <value>
                <fullName>ULSD BC05</fullName>
            </value>
            <value>
                <fullName>ULSDCP34</fullName>
            </value>
            <value>
                <fullName>ULSDCP43</fullName>
            </value>
            <value>
                <fullName>ULSD ON03</fullName>
            </value>
            <value>
                <fullName>ULSD ON04</fullName>
            </value>
            <value>
                <fullName>ULSD ON05</fullName>
            </value>
            <value>
                <fullName>ULSD ON06</fullName>
            </value>
            <value>
                <fullName>ULSD QC02</fullName>
            </value>
            <value>
                <fullName>ULSD QC05</fullName>
            </value>
            <value>
                <fullName>ULSD QC06</fullName>
            </value>
            <value>
                <fullName>ULSD QC07</fullName>
            </value>
            <value>
                <fullName>ULSD QC09</fullName>
            </value>
            <value>
                <fullName>ULSFUM ON03</fullName>
            </value>
            <value>
                <fullName>ULSFUM ON04</fullName>
            </value>
            <value>
                <fullName>ULSFUM ON05</fullName>
            </value>
            <value>
                <fullName>ULSFUM ON06</fullName>
            </value>
            <value>
                <fullName>ULSFUM QC02</fullName>
            </value>
            <value>
                <fullName>ULSFUM QC05</fullName>
            </value>
            <value>
                <fullName>ULSFUM QC06</fullName>
            </value>
            <value>
                <fullName>ULSFUM QC07</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>