force-app/main/default/objects/RE_Depot_Pricing_Backbone__c/fields/RE_CND_Group__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Group__c</fullName>
    <label>Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Branded</fullName>
            </value>
            <value>
                <fullName>Unbranded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>