force-app/main/default/objects/RE_Depot_Pricing_Backbone__c/fields/RE_CND_Notify_Users__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Notify_Users__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify Users</label>
    <type>Checkbox</type>
</CustomField>