force-app/main/default/objects/RE_Depot_Pricing_Backbone__c/fields/RE_CND_Parent_Rack_Group__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Parent_Rack_Group__c</fullName>
    <label>Parent Rack Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RE_CND_Product_Groups</valueSetName>
    </valueSet>
</CustomField>