force-app/main/default/objects/RE_Depot_Pricing_Backbone__c/fields/RE_CND_Pricing_Basis__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Pricing_Basis__c</fullName>
    <formula>IF(ISBLANK(RE_CND_Product_Pricing_Basis__r.RT_Product_Code__c),&apos; &apos;, 
IF(ISBLANK(RE_CND_Plant_Pricing_Basis__r.RE_Location_Code__c),&apos; &apos;,
IF(ISBLANK(TEXT(RE_CND_Group_Pricing_Basis__c)),&apos; &apos;,
RE_CND_Product_Pricing_Basis__r.RT_Product_Code__c + &apos;-&apos;+  RE_CND_Plant_Pricing_Basis__r.RE_Location_Code__c + &apos;-&apos;+ TEXT(RE_CND_Group_Pricing_Basis__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricing Basis</label>
    <type>Text</type>
</CustomField>