force-app/main/default/objects/RE_Depot_Pricing_Backbone__c/fields/RE_CND_Product_Differentials__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Product_Differentials__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Differential</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>RT_Setting__c.RE_CND_Differential_Type__c</field>
            <operation>equals</operation>
            <value>Product Differential</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>RT_Setting__c</referenceTo>
    <relationshipLabel>Depot Pricing Backbone (Product Differential)</relationshipLabel>
    <relationshipName>Depot_Pricing_Backbone_CND_Product</relationshipName>
    <type>Lookup</type>
</CustomField>