force-app/main/default/objects/RE_Depot_Pricing_Backbone__c/fields/RE_Deem_Value__c.field-meta.xml
<CustomField>
    <fullName>RE_Deem_Value__c</fullName>
    <label>Deem Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>