force-app/main/default/objects/RE_Depot_Pricing_Backbone__c/fields/RE_Depot_Name__c.field-meta.xml
<CustomField>
    <fullName>RE_Depot_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Depot Name</label>
    <referenceTo>RE_Location__c</referenceTo>
    <relationshipLabel>Depot Pricing Backbone</relationshipLabel>
    <relationshipName>Depot_Pricing_Backbone</relationshipName>
    <type>Lookup</type>
</CustomField>