force-app/main/default/objects/RE_Depot_Pricing_Backbone__c/fields/RE_Depot_Steer__c.field-meta.xml
<CustomField>
    <fullName>RE_Depot_Steer__c</fullName>
    <label>Depot Steer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>