force-app/main/default/objects/RE_Depot_Pricing_Backbone__c/fields/RE_Fixed_Premium_Percentage__c.field-meta.xml
<CustomField>
    <fullName>RE_Fixed_Premium_Percentage__c</fullName>
    <label>Fixed Premium Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>