force-app/main/default/objects/RE_Depot_Pricing_Backbone__c/fields/RE_IsTPFormula__c.field-meta.xml
<CustomField>
    <fullName>RE_IsTPFormula__c</fullName>
    <label>IsTPFormula</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deem</fullName>
            </value>
            <value>
                <fullName>Prem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>