force-app/main/default/objects/RE_Depot_Pricing_Backbone__c/fields/RE_Loss_Percentage__c.field-meta.xml
<CustomField>
    <fullName>RE_Loss_Percentage__c</fullName>
    <label>Loss Percentage</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>