force-app/main/default/objects/RE_Depot_Pricing_Backbone__c/fields/RE_PH_BIO_1__c.field-meta.xml
<CustomField>
    <fullName>RE_PH_BIO_1__c</fullName>
    <label>BIO 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CME DISCOUNT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>