force-app/main/default/objects/RE_Depot_Pricing_Backbone__c/fields/RE_PH_BIO_Fixed__c.field-meta.xml
<CustomField>
    <fullName>RE_PH_BIO_Fixed__c</fullName>
    <label>BIO Fixed</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>