force-app/main/default/objects/RE_Depot_Pricing_Backbone__c/fields/RE_PH_BIO_Fixed_Unit__c.field-meta.xml
<CustomField>
    <fullName>RE_PH_BIO_Fixed_Unit__c</fullName>
    <label>BIO Fixed Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RE_Rate_Unit_Set</valueSetName>
    </valueSet>
</CustomField>