force-app/main/default/objects/RE_Depot_Pricing_Backbone__c/fields/RE_PH_Freight_Conversion_Factor__c.field-meta.xml
<CustomField>
    <fullName>RE_PH_Freight_Conversion_Factor__c</fullName>
    <label>Freight Conversion Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>