force-app/main/default/objects/RE_Depot_Pricing_Backbone__c/fields/RE_PH_Fuel_Marking_Factor__c.field-meta.xml
<CustomField>
    <fullName>RE_PH_Fuel_Marking_Factor__c</fullName>
    <label>Fuel Marking Factor</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>