force-app/main/default/objects/RE_Depot_Pricing_Backbone__c/fields/RE_PH_MISC_Shifting_Cost__c.field-meta.xml
<CustomField>
    <fullName>RE_PH_MISC_Shifting_Cost__c</fullName>
    <label>MISC - Shifting Cost</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>