force-app/main/default/objects/RE_Depot_Pricing_Backbone__c/fields/RE_PH_Small_Lot__c.field-meta.xml
<CustomField>
    <fullName>RE_PH_Small_Lot__c</fullName>
    <label>Small Lot</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small Lot Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>