force-app/main/default/objects/RE_Depot_Pricing_Backbone__c/fields/RE_Primary_Transport_Offset__c.field-meta.xml
<CustomField>
    <fullName>RE_Primary_Transport_Offset__c</fullName>
    <label>Primary Transport Offset</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>