force-app/main/default/objects/RE_Depot_Pricing_Backbone__c/fields/RE_Product_Codes__c.field-meta.xml
<CustomField>
    <fullName>RE_Product_Codes__c</fullName>
    <formula>RE_Product_Name__r.RT_Product_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>