force-app/main/default/objects/RE_Depot_Pricing_Backbone__c/fields/RE_Reference_Product__c.field-meta.xml
<CustomField>
    <fullName>RE_Reference_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference Product</label>
    <referenceTo>RE_Product__c</referenceTo>
    <relationshipLabel>Depot Pricing Backbone (RE Reference Product)</relationshipLabel>
    <relationshipName>Depot_Pricing_Backbone1</relationshipName>
    <type>Lookup</type>
</CustomField>