force-app/main/default/objects/RE_Depot_Pricing_Backbone__c/fields/RE_TH_Gantry_Charge__c.field-meta.xml
<CustomField>
    <fullName>RE_TH_Gantry_Charge__c</fullName>
    <label>Gantry Charge</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>