force-app/main/default/objects/RE_Depot_Pricing_Backbone__c/fields/RE_TH_Gantry_charge_Unit__c.field-meta.xml
<CustomField>
    <fullName>RE_TH_Gantry_charge_Unit__c</fullName>
    <label>Gantry Charge Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>THB/L</fullName>
            </value>
            <value>
                <fullName>THB/LTR</fullName>
                <isActive>false</isActive>
                <label>THB/LTR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>