force-app/main/default/objects/RE_Depot_Pricing_Backbone__c/fields/RE_TH_SP_Adt__c.field-meta.xml
<CustomField>
    <fullName>RE_TH_SP_Adt__c</fullName>
    <label>SP Adt</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>