force-app/main/default/objects/RE_Depot_Pricing_Backbone__c/fields/RE_TH_TP_Premium_HCV2__c.field-meta.xml
<CustomField>
    <fullName>RE_TH_TP_Premium_HCV2__c</fullName>
    <label>TP Premium HCV2</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>