force-app/main/default/objects/RE_Depot_Pricing_Backbone__c/fields/RE_Valid_From__c.field-meta.xml
<CustomField>
    <fullName>RE_Valid_From__c</fullName>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>