force-app/main/default/objects/RE_Depot_Pricing_Backbone__c/fields/TP_Premium_HCV2_Unit__c.field-meta.xml
<CustomField>
    <fullName>TP_Premium_HCV2_Unit__c</fullName>
    <label>TP Premium HCV2 Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>THB/LTR</fullName>
            </value>
            <value>
                <fullName>THB/KG</fullName>
            </value>
            <value>
                <fullName>THB/TON</fullName>
            </value>
            <value>
                <fullName>USD/BBL</fullName>
            </value>
            <value>
                <fullName>USD/TON</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>